--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,22 @@ body {
 h2 {
   width: 100%;
   color: white;
-  font-size: 24px;
+  font-size: 32px;
 }
 
+/***********           Navbar               ***********/
+h1 {
+  margin: 10px 60px;
+}
+
+.activeNav {
+  color: black;
+  font-weight: 600;
+  font-size: 18px;
+}
+
+.defaultNav {
+  color: #2f2f2f;
+  font-weight: 450;
+  font-size: 18px;
+}
