--- a/src/App.css
+++ b/src/App.css
@@ -110,3 +110,23 @@ h1 {
   background-color: aquamarine;
 }
 /***********         SelectCourses              ***********/
+.searchForm {
+  margin: 0 0 0 20px;
+  padding: 20px 0;
+  background-color: #4682B4;
+}
+
+.formTitle {
+  font-weight: 500;
+  font-size: 28px;
+}
+
+.searchRow {
+  margin: 30px 0 60px 20px;
+}
+
+.showCoursebtn{
+  margin-left: 40px;
+  border-radius: 10px;
+  background-color: aquamarine;
+}
