--- a/src/App.css
+++ b/src/App.css
@@ -10,10 +10,11 @@ h2 {
 }
 
 /***********           Navbar               ***********/
-h1 {
-  margin: 10px 60px;
+.header-container {
+  display: inline-block;
+  width: 100%;
+  overflow: hidden;
 }
-
 .activeNav {
   color: black;
   font-weight: 600;
@@ -24,6 +25,24 @@ h1 {
   color: #2f2f2f;
   font-weight: 450;
   font-size: 18px;
+}
+
+@supports (backdrop-filter: blur(1rem)){
+  .header {
+    float: right;
+    max-width: 100%;
+    flex: 1;
+    flex-basis: 50px;
+    background: hsl(0 0% 100% / 0.005);
+    background-size: cover;
+    backdrop-filter: blur(0.5rem);
+  }
+}
+
+@media (max-width: 40em){
+  .header-container {
+    display: none;
+  }
 }
 
 /***********         Instruction              ***********/
@@ -98,9 +117,25 @@ h1 {
   width: 70%;
 }
 
+.courseList {
+  margin-left: 30px;
+  padding-right: 70px;
+}
+
+.inputContainer {
+  width: 150px;
+  margin-bottom: 30px;
+}
+
 .prevCourseInput {
-  margin-left: 100px;
-  margin-right: 20px;
+  display: inline-block;
+  width: 10px;
+  margin-right: 10px;
+  text-align: left;
+}
+
+.courseLabel {
+  width: 60px;
 }
 
 
@@ -108,6 +143,22 @@ h1 {
   margin-top: 60px;
   border-radius: 10px;
   background-color: aquamarine;
+}
+
+@media (max-width: 40em) {
+  .coursePage {
+    margin: 0 30px;
+    padding: 10px;
+  }
+
+  .courseList {
+    flex-direction: column;
+  }
+
+  .inputContainer {
+    margin-bottom: 40px;
+  }
+
 }
 /***********         SelectCourses              ***********/
 .searchForm {
