--- a/src/App.css
+++ b/src/App.css
@@ -70,7 +70,6 @@ h2 {
   .instruction {
     margin: 20px 40px;
   }
-  
 }
 
 /***********         Login              ***********/
@@ -108,6 +107,19 @@ h2 {
   display: inline-block;
   border-radius: 10px;
   background-color:lightBlue;
+}
+
+@media (max-width: 80em){
+  .LoginPage {
+    margin: 10px 100px;
+  }
+}
+
+@media (max-width: 40em){
+  .LoginPage {
+    margin: 10px 40px;
+  }
+  
 }
 
 /***********         PreviousCourses              ***********/
