--- a/src/App.css
+++ b/src/App.css
@@ -32,6 +32,10 @@ ul {
   width: 210px;
 }
 
+.navigation-menu ul {
+  justify-content: end;
+}
+
 .activeNav {
   color: black;
   font-weight: 600;
@@ -56,19 +60,24 @@ ul {
     background: hsl(0 0% 100% / 0.005);
     background-size: cover;
     backdrop-filter: blur(0.5rem);
+    z-index:1;
   }
 }
 
 @media screen and (max-width: 40em) {
+  .button-container{
+    z-index:3;
+  }
   .navBtn {
     display: block;
-    float: right;
+    position: fixed;
+    left: 400px;
     margin: 40px 40px 0 0;
     width: 50px;
     height: 50px;
     border-radius: 10%;
     background-color: lightBlue;
-    z-index: 999;
+    z-index: 5;
   }
 
   .notExpanded {
@@ -81,17 +90,31 @@ ul {
 
   .navigation-menu ul {
     flex-direction: column;
+    justify-content: start;
     position: absolute;
     top: 0;
     left: 150px;
     width: 100%;
     height: 100%;
-    border-top: 1px solid black;
     display: none;
   }
 
   .navigation-menu.expanded ul {
     display: block;
+  }
+
+  .header {
+    z-index: 1;
+  }
+
+  .topnav {
+    margin-top: 130px;
+  }
+
+  .navigator{
+    width: 100%;
+    margin-bottom: 30px;
+    margin-right: 180px;
   }
 
 }
