--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,6 @@ ul {
 .header-container {
   display: inline-block;
   width: 100%;
-  overflow: hidden;
 }
 
 .navigator {
@@ -65,9 +64,6 @@ ul {
 }
 
 @media screen and (max-width: 40em) {
-  .button-container{
-    z-index:3;
-  }
   .navBtn {
     display: block;
     position: fixed;
@@ -131,6 +127,12 @@ ul {
 .instruction .textShown {
   font-family: 'Helvetica';
   font-size: 24px;
+}
+
+@media (max-width: 80em){
+  .instruction {
+    margin: 10px 100px;
+  }
 }
 
 @media (max-width: 40em){
@@ -237,6 +239,12 @@ ul {
   margin-top: 60px;
   border-radius: 10px;
   background-color: aquamarine;
+}
+
+@media (max-width: 80em){
+  .coursePage {
+    margin: 10px 100px;
+  }
 }
 
 @media (max-width: 40em) {
