--- a/src/App.css
+++ b/src/App.css
@@ -263,16 +263,15 @@ ul {
 
 }
 /***********         SelectCourses              ***********/
-.container {
-  display: flex;
-  height: 280px;
-  width: 500px;
+.form-container {
+  width: 90%;
   background-color: #4682B4;
 }
 
 .searchForm {
   position: relative;
   width: 100%;
+  height: 100%;
   margin: 25px 0;
   border: 2px solid grey;
 }
@@ -292,7 +291,7 @@ ul {
 
 .searchRow {
   margin: 40px 0 20px 20px;
-  width: 60%;
+  width: 50%;
 }
 
 .searchInput {
@@ -300,7 +299,11 @@ ul {
 }
 
 .showCoursebtn{
-  margin-left: 15px;
+  margin: 0 0 20px 15px;
   border-radius: 10px;
   background-color: lightblue;
+}
+
+.courseContainer {
+  width: 100%;
 }
