#2 navbar modification (selectCourses page)

--- a/src/App.css
+++ b/src/App.css
@@ -263,6 +263,10 @@ ul {
 
 }
 /***********         SelectCourses              ***********/
+.selectCoursePage {
+  width:100%;
+}
+
 .form-container {
   width: 90%;
   background-color: #4682B4;
