--- a/src/App.css
+++ b/src/App.css
@@ -35,18 +35,20 @@ ul {
   justify-content: end;
 }
 
+.navigation-menu{
+  margin-bottom: 0;
+}
+
 .activeNav {
   color: black;
   font-weight: 600;
   font-size: 18px;
-  margin: 20px;
 }
 
 .defaultNav {
   color: #2f2f2f;
   font-weight: 450;
   font-size: 18px;
-  margin: 20px;
 }
 
 @supports (backdrop-filter: blur(1rem)){
