--- a/src/App.css
+++ b/src/App.css
@@ -400,9 +400,10 @@ ul {
 }
 
 .userProfileLine {
-  width: 150px;
-  height: 300px;
-  background-color: aliceblue;
+  width: 250px;
+  height: 250px;
+  background-color: black;
+  border-radius: 50%;
 }
 
 #square {
