--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+/* Juyee Myeong juyee.myeong@stonybrook.edu  */
+/* Juyeon Nam juyeon.nam@stonybrook.edu */
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
