#3 put names on App.css

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,7 @@
-
+/***********           
+  Juyee Myeong juyee.myeong@stonybrook.edu
+  Juyeon Nam juyeon.nam@stonybrook.edu
+***********/
 body {
   background-image: url("../public/SUNYKorea_AcBldg.jpg");
   overflow-x: hidden;
